# dx-job-controller

./: .gitignore  README.md  _version.py  pyproject.toml
docs/source/: admin_interface.rst  conf.py  digest_mail.rst  index.rst  installation_instructions.rst  job_controller.rst  managing_jobs.rst
docs/source/locale/pt_BR/LC_MESSAGES/: admin_interface.po  digest_mail.po  index.po  installation_instructions.po  job_controller.po  managing_jobs.po
src/job_controller/: admin.py  apps.py  models.py
src/job_controller/jobs/: job_controller.py
src/job_controller/locale/en/LC_MESSAGES/: django.po
src/job_controller/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
src/job_controller/migrations/: 0001_initial.py
src/job_controller/templates/job_controller/: digest_html.html  digest_txt.html
