[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dx-job-controller"
dynamic = ["version"]
authors = [
    {name="Sesóstris Vieira", email="sevieira@senado.leg.br"},
]
maintainers = [
    {name="Sesóstris Vieira", email="sevieira@senado.leg.br"},
]
description = "Django admin interface for django-extensions cronjobs"
readme = "README.md"
keywords = ["django", "django-extensions", "cronjobs", "admin"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Framework :: Django :: 5.0",
]
dependencies = [
    "Django>=4",
    "cron-converter>=1",
    "django-extensions>=4",
]

[project.urls]
Homepage = "https://github.com/interlegis/dx-job-controller"
Documentation = "https://github.com/interlegis/dx-job-controller/wiki"
Repository = "https://github.com/interlegis/dx-job-controller"
Issues = "https://github.com/interlegis/dx-job-controller/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/job_controller"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"